# CSE6230-Project

./: .gitignore  README.md  boid.py
CSE6230-Project 2/: README.md
CSE6230-Project 2/cpp_boids/: CMakeLists.txt  common.h  gpu.cu  main.cu  readme.md
CSE6230-Project 2/taichiBoid3D/: boid.py
cpp_boids/: CMakeLists.txt  animation.py  common.h  gpu.cu  load  main.cu
py_boids/: boid.py
taichiBoid3D/: boid.py
